[tool.poetry]
name = "prueba-python"
version = "0.1.0"
description = "The pruebapython Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juancece/prueba-python"
repository = "https://github.com/juancece/prueba-python"
authors = ["juancece <juancece@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
